--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mariogl_digi/is-wds2",
+  "name": "@mariogl_digi/is-wds",
   "version": "1.0.0",
   "description": "Is the string WDS?",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MarioGLDIGI/is-wds-npm-package22.git"
+    "url": "https://github.com/MarioGLDIGI/is-wds-npm-package.git"
   },
   "keywords": [
     "WDS"
